external-crates/move/crates/move-compiler/tests/move_2024/parser/lambda_expression_return_type_named_block.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/lambda_expression_return_type_named_block.move:7:25
  │
7 │         call!(|| -> u64 'a: { 0 });
  │                         ^^
  │                         │
  │                         Unexpected ''a'
  │                         Expected '{'

